--- a/QueryIT/QueryIT.csproj
+++ b/QueryIT/QueryIT.csproj
@@ -28,7 +28,7 @@
     <InstallUrl>http://queryit.purepix.net/</InstallUrl>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>7</ApplicationRevision>
+    <ApplicationRevision>9</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -148,6 +148,18 @@
     <Compile Include="FilterForm.Designer.cs">
       <DependentUpon>FilterForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AutoCaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AutoCaseForm.Designer.cs">
+      <DependentUpon>AutoCaseForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ConcatForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConcatForm.Designer.cs">
+      <DependentUpon>ConcatForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Progress.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -202,6 +214,12 @@
     <Compile Include="model\Datasource.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Table.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Table.Designer.cs">
+      <DependentUpon>Table.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -229,6 +247,12 @@
     <EmbeddedResource Include="FilterForm.resx">
       <DependentUpon>FilterForm.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AutoCaseForm.resx">
+      <DependentUpon>AutoCaseForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConcatForm.resx">
+      <DependentUpon>ConcatForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Progress.resx">
       <DependentUpon>Progress.cs</DependentUpon>
@@ -265,6 +289,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SearchForm.resx">
       <DependentUpon>SearchForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Table.resx">
+      <DependentUpon>Table.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="keyBag.pfx" />
