--- a/QueryIT/QueryIT.csproj
+++ b/QueryIT/QueryIT.csproj
@@ -114,12 +114,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataModel\ColumnSchema.cs" />
+    <Compile Include="DataModel\DatabaseSchema.cs" />
+    <Compile Include="DataModel\ConnectionSchema.cs" />
+    <Compile Include="DataModel\ViewSchema.cs" />
+    <Compile Include="DataModel\TableSchema.cs" />
     <Compile Include="CoreModulForm\Chunk.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="CoreModulForm\Chunk.Designer.cs">
       <DependentUpon>Chunk.cs</DependentUpon>
     </Compile>
+    <Compile Include="Todo.cs" />
     <Compile Include="ModalForm\AboutForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +133,18 @@
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Class\PluginCore.cs" />
+    <Compile Include="SubForms\ExportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SubForms\ExportForm.Designer.cs">
+      <DependentUpon>ExportForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SubForms\ImportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SubForms\ImportForm.Designer.cs">
+      <DependentUpon>ImportForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ToolForm\DateTimeForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -187,7 +205,7 @@
     <Compile Include="CoreModulForm\Queryer.Designer.cs">
       <DependentUpon>Queryer.cs</DependentUpon>
     </Compile>
-    <Compile Include="Class\SQLSyntax.cs" />
+    <Compile Include="DataModel\SQLSyntax.cs" />
     <Compile Include="ModalForm\ProgressForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -245,7 +263,7 @@
     <Compile Include="SubForms\ConnectForm.Designer.cs">
       <DependentUpon>ConnectForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Class\Datasource.cs" />
+    <Compile Include="DataModel\Datasource.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubForms\TableForm.cs">
@@ -268,6 +286,12 @@
     <EmbeddedResource Include="CoreModulForm\CrossJoin.resx">
       <DependentUpon>CrossJoin.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SubForms\ExportForm.resx">
+      <DependentUpon>ExportForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SubForms\ImportForm.resx">
+      <DependentUpon>ImportForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ToolForm\DateTimeForm.resx">
       <DependentUpon>DateTimeForm.cs</DependentUpon>
