--- a/QueryIT/QueryIT.csproj
+++ b/QueryIT/QueryIT.csproj
@@ -31,7 +31,7 @@
     <SuiteName>QueryIT</SuiteName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>15</ApplicationRevision>
+    <ApplicationRevision>17</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -114,6 +114,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class\QLog.cs" />
     <Compile Include="DataModel\ColumnSchema.cs" />
     <Compile Include="DataModel\DatabaseSchema.cs" />
     <Compile Include="DataModel\ConnectionSchema.cs" />
@@ -124,6 +125,12 @@
     </Compile>
     <Compile Include="CoreModulForm\Chunk.Designer.cs">
       <DependentUpon>Chunk.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SubForms\ConvertForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SubForms\ConvertForm.Designer.cs">
+      <DependentUpon>ConvertForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Todo.cs" />
     <Compile Include="ModalForm\AboutForm.cs">
@@ -286,6 +293,9 @@
     <EmbeddedResource Include="CoreModulForm\CrossJoin.resx">
       <DependentUpon>CrossJoin.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SubForms\ConvertForm.resx">
+      <DependentUpon>ConvertForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SubForms\ExportForm.resx">
       <DependentUpon>ExportForm.cs</DependentUpon>
